fixed (#3) add translates: ru_ru.json, sr_sp.json

--- a/src/main/resources/assets/deadlyland/lang/en_us.json
+++ b/src/main/resources/assets/deadlyland/lang/en_us.json
@@ -5,13 +5,15 @@
   "item.deadlyland.baobab_fruit": "Baobab Fruit",
   "item.deadlyland.netherite_hammer": "Netherite Hammer",
   "item.deadlyland.pink_crystal": "Pink Crystal",
+  "item.deadlyland.spike": "Spike",
+  "item.deadlyland.baobab_lemonade": "Baobab Lemonade",
   "item.deadlyland.pink_crystal.tooltip": "Basic Crystal uses in crafts",
   "item.deadlyland.red_crystal": "Red Crystal",
-  "item.deadlyland.red_crystal.tooltip": "If imposed on weapon:  + 0.5 Attack Speed",
+  "item.deadlyland.red_crystal.tooltip": "On imposed on chestplate:  + 0.5 Attack Speed",
   "item.deadlyland.green_crystal": "Green Crystal",
-  "item.deadlyland.green_crystal.tooltip": "If imposed on armor:  + Jump Boost",
+  "item.deadlyland.green_crystal.tooltip": "On used:  + Jump Boost",
   "item.deadlyland.blue_crystal": "Blue Crystal",
-  "item.deadlyland.blue_crystal.tooltip": "If imposed on armor:  + Speed",
+  "item.deadlyland.blue_crystal.tooltip": "On imposed on feet:  + Speed",
   "item.deadlyland.purple_crystal": "Purple Crystal",
-  "item.deadlyland.purple_crystal.tooltip": "If imposed on armor:  + 4 Health"
+  "item.deadlyland.purple_crystal.tooltip": "On imposed on helmet:  + 4 Health"
 }
