added Burnt Plants, code optimization

--- a/src/main/resources/assets/deadlyland/lang/en_us.json
+++ b/src/main/resources/assets/deadlyland/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "itemGroup.deadlyland.deadlyland_group": "Deadlyland",
   "block.deadlyland.prickly_grass": "Prickly Grass",
   "block.deadlyland.baobab_leaves": "Baobab Leaves",
   "block.deadlyland.crystal_ore": "Crystal Ore",
