--- a/src/main/resources/assets/deadlyland/lang/ru_ru.json
+++ b/src/main/resources/assets/deadlyland/lang/ru_ru.json
@@ -1,4 +1,5 @@
 {
+  "itemGroup.deadlyland.deadlyland_group": "Deadlyland",
   "block.deadlyland.prickly_grass": "Колючая трава",
   "block.deadlyland.baobab_leaves": "Листва баобаба",
   "block.deadlyland.crystal_ore": "Кристальная руда",
