--- a/src/main/resources/assets/deadlyland/lang/sr_sp.json
+++ b/src/main/resources/assets/deadlyland/lang/sr_sp.json
@@ -1,4 +1,5 @@
 {
+  "itemGroup.deadlyland.deadlyland_group": "Deadlyland",
   "block.deadlyland.prickly_grass": "Бодљикава трава",
   "block.deadlyland.baobab_leaves": "Лишће баобаба",
   "block.deadlyland.crystal_ore": "Кристална руда",
